pkg/synthesis/tests_expected_output/k8s_resources/ExampleGroup3/namespaces.yaml
apiVersion: v1
kind: Namespace
metadata:
    labels:
        k8s.ovn.org/primary-user-defined-network: ""
        kubernetes.io/metadata.name: seg1
    name: seg1
spec: {}
status: {}
