pkg/synthesis/tests_expected_output/k8s_resources/ExampleGroup3/pods.yaml
apiVersion: v1
kind: Pod
metadata:
    creationTimestamp: null
    labels:
        group__path-group: "true"
        group__research-app: "true"
        group__research-seg-1: "true"
        in_Segment__seg1: "true"
    name: New-VM-1
    namespace: seg1
spec:
    containers: null
status: {}
---
apiVersion: v1
kind: Pod
metadata:
    creationTimestamp: null
    labels:
        group__path-group: "true"
        group__research-app: "true"
        in_Segment__seg1: "true"
    name: New-VM-2
    namespace: seg1
spec:
    containers: null
status: {}
---
apiVersion: v1
kind: Pod
metadata:
    creationTimestamp: null
    labels:
        group__foo-app: "true"
        group__foo-frontend: "true"
        group__path-group: "true"
        group__research-app: "true"
        group__research-seg-1: "true"
    name: New-VM-3
    namespace: default
spec:
    containers: null
status: {}
---
apiVersion: v1
kind: Pod
metadata:
    creationTimestamp: null
    labels:
        group__foo-app: "true"
        group__foo-backend: "true"
        group__path-group: "true"
        group__research-app: "true"
        group__research-seg-1: "true"
    name: New-VM-4
    namespace: default
spec:
    containers: null
status: {}
---
apiVersion: v1
kind: Pod
metadata:
    creationTimestamp: null
    labels:
        group__research-app: "true"
        group__research-test-expr-2: "true"
    name: New-NLCVirtual-NLCMachine
    namespace: default
spec:
    containers: null
status: {}
